# HCC_Radiomics

./: .gitignore  CITATION.cff  Classifiers using BPSO.py  LiverHccSeg (Open Source).xlsx  Pycharm copy.xlsx  README.md  TPOT (Thesis).py  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  experiment_request.yml
.github/workflows/: tests.yml
configs/: default.yaml
data/: README.md
docs/: experiment_plan.md  methodology.md
legacy/: README.md  SVM (3 Feature Selector).py  Test Code.py
scripts/: check_no_tracked_patient_data.py  run_experiment.py
src/hcc_radiomics/: __init__.py  cli.py  data.py  evaluation.py  experiment.py  feature_selection.py  models.py  preprocessing.py
tests/: test_data_validation.py  test_experiment_bundle.py  test_feature_selection.py  test_no_leakage.py  test_patient_data_guard.py  test_smoke_pipeline.py
