[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hcc-radiomics"
version = "0.1.0"
description = "Leakage-safe HCC radiomics classification workflow"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "joblib>=1.3",
  "matplotlib>=3.7",
  "numpy>=1.24",
  "openpyxl>=3.1",
  "pandas>=2.0",
  "PyYAML>=6.0",
  "scikit-learn>=1.3",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.4",
]

[project.scripts]
hcc-radiomics = "hcc_radiomics.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-ra"
